I added all requirements as well as welcoming the user with h1 tags.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <a href = "https://www.columbusstate.edu/">CSU</a>
   </nav>
   <main>
-    
+    <h1>Welcome</h1>
+      <h3>Assignment 1</h3>
   </main>
   <footer>
     <p>TERANGA LLC <span>&#169;</span> </p>  <div class = "info"><p>Adress: 1234 Unknown St, Some, Where</p>  <p classs = "cont">Contact: +221772233411</p></div> 
