I made website responsive for users with mobile devices.

--- a/index.html
+++ b/index.html
@@ -10,21 +10,28 @@
 
 <body>
   <header>
-   
+   <div class = "bakcolor"></div>
   </header>
   <nav>
-<a href = "index.html">Home</a>
-    <a href = "page1.html">Page 1</a>
-    <a href = "page2.html"> Page 2</a> 
-<a href = "https://www.columbusstate.edu/">CSU</a>
+<a  tabindex= "1" href = "index.html">Home</a>
+    <a  tabindex= "2" href = "page1.html">Page 1</a>
+    <a  tabindex= "3" href = "page2.html"> Page 2</a> 
+    <a   tabindex= "4"href = "page3.html"> Page 3</a>
+<a   tabindex= "5" href = "https://www.columbusstate.edu/">CSU</a>
   </nav>
   <main>
     <h1>Welcome</h1>
       <h3>Assignment 1</h3>
+    <p> The rastafari movement was born in Jamaica in the 1930's. It comes from the teachings of the famous jamaican speaker and motivator, Marcus Garvey &hearts;
+    </p>
   </main>
+  <aside class = "asidemain">
+      <img src="Images/asidemain.png" alt="Rastafarian Flag" width="90%" height="100%">
+  </aside>
   <footer>
     <p>TERANGA LLC <span>&#169;</span> </p>  <div class = "info"><p>Adress: 1234 Unknown St, Some, Where</p>  <p classs = "cont">Contact: +221772233411</p></div> 
   </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
