--- a/page2.html
+++ b/page2.html
@@ -11,13 +11,14 @@
 
 <body>
   <header>
-    
+     <div class = "bakcolor"></div>
   </header>
   <nav>
-<a href = "index.html">Home</a>
-    <a href = "page1.html">Page 1</a>
-    <a href = "page2.html"> Page 2</a> 
-<a href = "https://www.columbusstate.edu/">CSU</a>
+<a  tabindex= "1" href = "index.html">Home</a>
+    <a  tabindex= "2" href = "page1.html">Page 1</a>
+    <a  tabindex= "3" href = "page2.html"> Page 2</a> 
+    <a  tabindex= "4" href = "page3.html"> Page 3</a>
+<a  tabindex= "5"href = "https://www.columbusstate.edu/">CSU</a>
   </nav>
   <main>
     
@@ -46,6 +47,9 @@
   
 </table> 
   </main>
+  <aside>
+    <iframe tabindex= "6" height="100%" width="100%" src="https://www.bobmarley.com" title="BOB MARLEY Official website"></iframe>
+  </aside>
   <footer>
     <p>TERANGA LLC <span>&#169;</span> </p>  <div class = "info"><p>Adress: 1234 Unknown St, Some, Where</p>  <p class = "cont">Contact: +221772233411</p></div> 
   </footer>
